css/layout.css
/* ... */
/* #Primary
================================================== */

.section{
    position:relative;
	width:100%;
}
.full-height{
	height:100vh;
}
.min-full-height{
	min-height:calc(100vh - 76px);
}
.full-home-height{
	height:100vh;
}
.big-height{
	height:85vh;
}
.higher-height{
	height:65vh;
}
.half-height{
	height:35vh;
}
.padding-top-bottom{
	padding-top:60px;
	padding-bottom:60px;
}
.padding-top{
	padding-top:120px;
}
.padding-bottom{
	padding-bottom:120px;
}
.padding-top-bottom-small{
	padding-top:70px;
	padding-bottom:70px;
}
.padding-top-small{
	padding-top:60px;
}
.padding-top-small2{
    padding-top:40px;
}
.padding-bottom-small{
	padding-bottom:70px;
}
.padding-top-page{
	padding-top:180px;
}
.back-dark{
	background-color:#212121;
}
.back-dark3{
	background-color:#303030;
}
.back-dark2{
	background-color:#181818;
}
.back-dark1{
	background-color:#060606;
}
.back-black{
	background-color:#000000;
}
.back-white{
	background-color:#ffffff;
}
.back-white1{
	background-color:#fefefe;
}
.back-white2{
	background-color:#fcfcfc;
}
.back-gray{
	background-color:#f9f9f9;
}

.dark-over-home-slider{
	position:absolute;
	background:#212121;
	opacity:1;
	width:100%;
	height:100%;
	overflow:hidden;
	z-index:4;
	top:0;
	left:0;
    background: url('../images/backgroundMain.png') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

}
.sep-home-but{
	position:relative;
	width:100%;
	height:60px;
}
.home-text-wrap{
	position:absolute;
	width:100%;
	top:50%;
	margin-top:50px;
	left:0;
	z-index:20;
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	-o-transform: translateY(-50%);
	transform: translateY(-50%);
}
.home-text-wrap h1{
	text-align:center;
	letter-spacing:3px;
	color:#fff;
	font-size:40px;
	line-height:46px;
	font-weight:700;
	margin-bottom:20px;
}
.home-text-wrap p{
	text-align:center;
	letter-spacing:1px;
	color:#fff;
	font-size:10px;
	line-height:12px;
	font-weight:500;
	text-transform:uppercase;
}
.home-text-wrap p span{
	padding:6px 18px;
}


.home-text-freelance{
	position:absolute;
	width:100%;
	top:50%;
	left:0;
	z-index:10;
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	-o-transform: translateY(-50%);
	transform: translateY(-50%);
}
.home-text-freelance h1{
	position:relative;
	font-size: 30px;
	line-height:40px;
	font-weight:700;
	color: #f9f9f9;
}
.home-text-freelance h1 span{
	font-size: 80px;
	line-height: 120px;
	color: #f9f9f9;
	-webkit-text-fill-color: transparent;
	background: #f9f9f9;
	background: -o-linear-gradient(transparent, transparent);
	-webkit-background-clip: text;
	background-position:center center;
	background-size:cover;
	text-shadow: 2px 8px 6px rgba(0,0,0,0.1);
}


.section-title{
	position:relative;
	width:100%;
	padding-bottom:50px;
}
.section-title.title-page-sec{
	margin-top:120px;
	padding-bottom:0;
}
.section-title.no-padding{
	padding-bottom:0;
}
.section-title .shadow-title{
	position:absolute;
	width:100%;
	top:-15px;
	left:0;
	text-align:center;
	font-family: 'Poppins', sans-serif;
	font-weight:700;
	font-size: 90px;
	line-height:40px;
	letter-spacing:2px;
	opacity:.1;
}
.section-title.error-page .shadow-title{
	top:30px;
	font-size: 400px;
	line-height:40px;
}
.section-title h3{
	text-align:center;
	font-size: 34px;
	line-height:42px;
	letter-spacing:2px;
	font-weight:700;
	text-transform:uppercase;
}
.section-title h4{
	text-align:center;
	font-size: 28px;
	line-height:36px;
	letter-spacing:2px;
	font-weight:700;
	text-transform:uppercase;
}
.section-title p{
	text-align:center;
	padding-top:15px;
	letter-spacing:2px;
	font-size: 14px;
	font-weight:600;
	opacity:.6;
	text-transform:uppercase;
}

/* #About
================================================== */

.about-wrap{
	position:relative;
	width:100%;
}
.about-wrap.with-padding{
	padding:30px;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}
.about-wrap h5{
	text-align:center;
}
.about-wrap p{
	text-align:center;
	padding-top:20px;
}
.about-wrap .about-icon{
	position:relative;
	text-align:center;
	margin:0 auto;
	margin-bottom:15px;
	width: 48px;
	height: 48px;
	z-index:3;
}
svg * {
  fill: none;
  stroke: currentColor;
}

/* #Team
================================================== */

.team-wrap{
	position:relative;
	width:100%;
}
.team-wrap h5{
	text-align:center;
	padding-bottom:20px;
}
.team-wrap p{
	text-align:center;
	padding-bottom:25px;
}
.team-wrap img{
	width:100%;
	display:block;
	padding-bottom:30px;
}

.social-team{
	position:relative;
	display:block;
	margin:0 auto;
	text-align:center;
}
.list-social-team li {
    padding:0;
	margin:0 auto;
    list-style: none;
	text-align:center;
	width:20px;
	height:20px;
    display: inline-block;
	cursor:pointer;
	border-radius:50%;
	margin-right:3px;
	margin-left:3px;
    -webkit-transition: all 300ms linear;
    -moz-transition: all 300ms linear;
    -o-transition: all 300ms linear;
    -ms-transition: all 300ms linear;
    transition: all 300ms linear;
}
.list-social-team li.icon-team a {
	font-family: 'FontAwesome';
	font-size: 14px;
	line-height:20px;
	text-align:center;
	width:20px;
	color:#fff;
	opacity:1;
	margin:0;
	padding:0;
    -webkit-transition: all 300ms linear;
    -moz-transition: all 300ms linear;
    -o-transition: all 300ms linear;
    -ms-transition: all 300ms linear;
    transition: all 300ms linear;
}
.list-social-team li:hover{
}
.list-social-team li:hover.icon-team a{
}


/* #Counter
================================================== */

.countdown-text {
	position:relative;
	margin-top:20px;
	width:100%;
	display: block;
	text-align: center;
}

ul.countdown {
	position:relative;
	width:100%;
	display: block;
	text-align: center;
}
ul.countdown li {
	display: inline-block;
}
/* ... */

